---------------------------------------------------------------------------------------------------
Version: 1.6.5
Date: 15.1.2018
  Changes:
    - Removed obsolete migration 
    - Encoded position signals have unique icons
---------------------------------------------------------------------------------------------------
Version: 1.6.4
Date: 14.1.2018
  Bugfixes:
    - Trains are reinitialized each configuration change to catch changes to locomotives and wagons
    - Trains where not properly removed from lookup table when leaving stops
---------------------------------------------------------------------------------------------------
Version: 1.6.3
Date: 7.1.2018
  Bugfixes:
    - Error when removing depot in state yellow #95
  Changes:
    - pushed base to 0.16.14
---------------------------------------------------------------------------------------------------
Version: 1.6.2
Date: 30.12.2017
  Features:
    - in game changelog
  Changes:
    - pushed base to 0.16.8
    - data phase item detection is more robust
    - migrating from versions older than 1.1.1 displays error message
---------------------------------------------------------------------------------------------------
Version: 1.6.1
Date: 20.12.2017
  Features:
    - hr graphics
    - yellow depot lamp color indicating a train with assigned delivery still being parked
  Removed:
    - migration support for versions < 1.1.1 (final Factorio 0.14 release)
  Changes:
    - stop timeout description no longer mentions inactivity #83
    - train references from MainLocomotive.unit_number to train.id
    - deliveries will be removed instantly if the assigned train changes composition e.g a wagon is removed
    - lamp colors update faster
  Bugfixes:
    - mining a single locomotive parked at an ltn stop would not update the stop
---------------------------------------------------------------------------------------------------
Version: 1.6.0
Date: 14.12.2017
  Features:
    - updated to Factorio 0.16