@@ -1,11 +1,11 @@
 {
   "name": "LogisticTrainNetwork",
-  "version": "1.6.4",
+  "version": "1.6.5",
   "title": "LTN - Logistic Train Network",
   "author": "Optera",
   "contact": "https://forums.factorio.com/memberlist.php?mode=viewprofile&u=21729",
   "homepage": "https://forums.factorio.com/viewforum.php?f=214",
   "description": "Adds new train stops forming a highly configurable, fully automated logistic network.",
   "factorio_version": "0.16",
-	"dependencies": ["base >= 0.16.14", "?creative-mode >= 0.3.2"]
+	"dependencies": ["base >= 0.16.16", "?creative-mode >= 0.3.2"]
 }
