@@ -30,6 +30,7 @@ logistic-train-network=Logistik Haltestellen ermöglichen voll automatisierte Li
 LTN-locomotive=Kodierte Position von __1__
 LTN-wagon=Kodierte Position von __1__
 ltn-depot=Hatestelle ist Depot
+ltn-network-id=Kodierte Netzwerk ID
 ltn-min-train-length=minimale Zuglänge
 ltn-max-train-length=maximale Zuglänge
 ltn-max-trains=maximale Zuganzahl
