@@ -30,6 +30,7 @@ logistic-train-network=Logistic Train Stops request and provide items for fully 
 LTN-locomotive=Encoded positions of __1__
 LTN-wagon=Encoded positions of __1__
 ltn-depot=Stop is Depot
+ltn-network-id=Encoded Network ID
 ltn-min-train-length=Minimum Train Length
 ltn-max-train-length=Maximum Train Length
 ltn-max-trains=Limit Trains
