@@ -1,9 +1,11 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.6.5
 Date: 15.1.2018
-  Changes:
-    - Removed obsolete migration 
+  Features:
     - Encoded position signals have unique icons
+    - Encoded position signals are properly grouped by locomotive and wagon types
+  Changes:
+    - Removed obsolete migration
 ---------------------------------------------------------------------------------------------------
 Version: 1.6.4
 Date: 14.1.2018
